# oidc-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.mysql  LICENSE  Makefile  Rocket.toml  docker-compose.yml  make_jwk.sh
migrations/2021-12-01-124326_auth_challenges/: down.sql  up.sql
migrations/2021-12-02-233221_session/: down.sql  up.sql
migrations/2021-12-04-044410_auth_code/: down.sql  up.sql
migrations/2021-12-04-051844_client/: up.sql
migrations/2021-12-04-092738_tokens/: up.sql
src/: authentication.rs  error.rs  internal.rs  lib.rs  main.rs  message.rs  models.rs  repository.rs  schema.rs  server.rs  storage.rs  token.rs  utils.rs
src/internal/: authentication.rs  client.rs  enums.rs  token.rs  userinfo.rs
src/message/: authentication.rs  client.rs  consent.rs  enums.rs  login.rs  token.rs  userinfo.rs
src/server/: context.rs  request.rs  response.rs
templates/: consent.html.tera  error.html.tera  login.html.tera
