[package]
name = "oidc-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
rocket = "0.5.0-rc.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
validator = { version = "0.14.0", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
