[package]
name = "oidc-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
rocket = "0.5.0-rc.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
validator = { version = "0.14.0", features = ["derive"] }
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
default-features = false
features = ["handlebars", "tera"]
