[package]
name = "oidc-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
validator = { version = "0.14.0", features = ["derive"] }
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
rust-crypto = "0.2.36"
time = { version = "0.3", default-features = false, features = ["std", "macros"] }
chrono = "0.4.19"
jsonwebtoken = "7.2.0"
thiserror = "1.0.30"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
default-features = false
features = ["handlebars", "tera"]
